✨ add create report api
